[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "okta"
version = "0.0.2"
authors = [
  { name="Uri Ishon", email="uishon@gmail.com" },
]
description = "Login to Okta and retun cookie."
dependencies = [
    "selenium==4.6.1",
    "webdriver-manager==3.8.5"
]
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = [ "okta", "sso", "vpn", "fortinet" ]

[project.scripts]
okta-login = "okta.login:cookie"

[project.urls]
"Homepage" = "https://github.com/uishon/okta"